# transformer-learning

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
figures/: example_label_smoothing.html  example_mask.html  example_positional.html  penalization_visulization.html
src/transformer/: example.py  test.py  transformer.py  utils.py
src/transformer-learning/: example.py  test.py
src/transformer_learning/: example.py  train.py  transformer.py
