[tool.poetry]
name = "transformer-learning"
version = "0.1.0"
description = ""
authors = ["Yangyang Li <yangyang.li@northwestern.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^13.5.2"


[tool.poetry.scripts]
"examples" = "transformer-learning.example:main"

[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[tool.ruff]
line-length = 120


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
